--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     height: 100vh;
     margin:0;
     background-color: #eee;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -15,8 +17,28 @@ header h1 {
 }
 
 .bar {
+    height: 3rem;
     display: flex;
     justify-content: center;
     align-items: center;
     justify-content: space-evenly;
+    border-radius: 1.4rem;
+    background-color: black;
+}
+
+.bar a{
+    color:white;
+}
+
+main {
+    border: solid black 2px;
+    display: flex;
+    flex-direction: row;
+}
+
+footer{
+    height: 15vh;
+    margin-top: auto;
+    background-color: black;
+    color:white;
 }
