--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     background-color: #eee;
     display: flex;
     flex-direction: column;
+    font-family:sans-serif;
 }
 
 header {
@@ -28,6 +29,7 @@ header h1 {
     width:22%;
     height: 3rem;
     background-color: #eee;
+    font-size: 20px;
 }
 
 .bar button:hover{
@@ -70,4 +72,37 @@ footer{
     margin-top: auto;
     background-color: black;
     color:#eee;
+}
+
+@media screen and (max-width: 480px) {
+    main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .lista {
+        width:100%;
+    }
+    
+    .lista h2 {
+        margin-left: 0;
+        margin-top: 0;
+    }
+
+    .lista p {
+        width: 80%;
+        margin-left:0;
+        margin-top:0;
+    }
+    .lista img {
+        width:80%;
+        height: 30vh;
+        float:none;
+    }
+
+    .bar button {
+        width:25%;
+        font-size: 16px;
+    }
 }
